<resources>
    <string name="app_name">MLRIT</string>
    <string name="action_settings">Settings</string>
    <string name="helloworld">helloworld</string>
    <string name="login">Login</string>
    <string name="user_name_hint">User Name</string>
    <string name="password_hint">Password</string>
    <string name="submit_text_button">Submit</string>
    <string name="reset_btn_text">Reset</string>
    <string name="student">Student</string>
    <string name="faculty">Faculty</string>

</resources>
