<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




<LinearLayout
android:id="@+id/ll_main_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
android:background="#444444"
android:padding="25dp"
android:orientation="vertical">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="30sp"
    android:text="@string/login"
    android:textColor="#6dffbf"
    android:textSize="25sp" />
<EditText
    android:id="@+id/et_user_name"
    android:hint="@string/user_name_hint"
    android:textColor="#6bfff7"
    android:textColorHint="#52afaa"
    android:textAlignment="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
<EditText
    android:id="@+id/et_password"
    android:hint="@string/password_hint"
    android:textColor="#6bfff7"
    android:textColorHint="#52afaa"
    android:textAlignment="center"
    android:inputType="textPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="25dp"
    android:orientation="horizontal">
    <Button
        android:id="@+id/btn_reset"
        android:text="@string/reset_btn_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_submit"
        android:text="@string/submit_text_button"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>